--- a/BikeDistributor.Test/BikeDistributor.Test.csproj
+++ b/BikeDistributor.Test/BikeDistributor.Test.csproj
@@ -50,6 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DiscountRuleTest.cs" />
+    <Compile Include="OrderLineItemTest.cs" />
     <Compile Include="OrderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
