--- a/BikeDistributor/BikeDistributor.csproj
+++ b/BikeDistributor/BikeDistributor.csproj
@@ -39,10 +39,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Company.cs" />
+    <Compile Include="DiscountRule.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Bike.cs" />
+    <Compile Include="OrderLineItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Line.cs" />
+    <Compile Include="ReceiptRenderers\HTMLReceiptRenderer.cs" />
+    <Compile Include="ReceiptRenderers\IReceiprRenderer.cs" />
+    <Compile Include="ReceiptRenderers\ReceiptRenderer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
